find_package(GTest REQUIRED)

include_directories(${PROJECT_SOURCE_DIR}/src)

enable_testing()
add_subdirectory(2d_array)
add_subdirectory(alias)
add_subdirectory(binary_search)
add_subdirectory(equal_range)
add_subdirectory(function_pointer)
add_subdirectory(function_wrapper)
add_subdirectory(lambda)
add_subdirectory(member_pointer)
add_subdirectory(ostream)
add_subdirectory(singleton)
add_subdirectory(stringizing)
add_subdirectory(template_function)
add_subdirectory(template_template)
add_subdirectory(token_pasting)
add_subdirectory(unprotected)
